manifests/apps/talos/victoriametrics/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/enforce: privileged
  name: victoriametrics
