manifests/apps/talos/victoriametrics/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: traefik-system
    sectionName: websecure
  hostnames:
  - "grafana.bigli.io"
  rules:
  - backendRefs:
      - group: ""
        kind: Service
        name: vm-grafana
        port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route-redirect
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: traefik-system
    sectionName: web
  hostnames:
  - "grafana.bigli.io"
  rules:
  - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
